# huffman

./: CMakeLists.txt
tests/: file  file_compressed  test1.txt  test1_compressed.txt  test2.txt  test2_compressed.txt  test3.7z  test3_compressed.7z  unicode_start_compressed
utility/: CMakeLists.txt  file_huffman.cpp  file_huffman.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  main.cpp
